# cognitive-core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  OPERATIONAL_NOTES.md  PROD_READINESS.md  QUICKSTART.md  README.md  RELIABILITY_AUDIT.md  capture_traces.py  chain_demo_results.json  compare_analytics.py  coordinator.db  demo.sh  demo_batch_sar.py  demo_batch_sar_live.py  demo_insurance_claim.py  demo_live_coordinator.py  docker-compose.yml  docker-entrypoint.sh  llm_config.yaml  pyproject.toml  requirements.txt  run_batch_test.py  run_return_pipeline.sh  smoke_test.py  traces.json
_archive/engine/: audit.py  exceptions.py  runner.py  tool_dispatch.py
api/: __init__.py  arq_worker.py  foundry_adapter.py  models.py  server.py  worker.py
cases/: ach_revoked_authorization.json  card_clear_fraud.json  cardiac_chest_pain.json  check_clearing_complaint_diouf.json  complaint_torres.json  human_task_responses.json  insurance_claim_hard.json  insurance_claim_meridian.json  laptop_return_suspicious.json  military_hardship_reeves.json  sar_structuring.json  scaffold_case.json  spending_advisor_williams.json  spending_advisor_williams_followup.json
cases/fixtures/: check_clearing_complaint_diouf.json  human_task_responses.json
cases/full/: avm_regulation.json  check_clearing_complaint_diouf.json  spending_advisor_williams.json
cases/synthetic/: da_001_minor_clean.json  da_002_moderate.json  da_003_total_loss_clean.json  da_004_major_missing_docs.json  da_005_minor_missing_photos.json  fs_001_low_risk_clean.json  fs_002_medium_risk_patterns.json  fs_003_medium_risk.json  fs_004_high_risk_siu.json  mh_001_mixed_portfolio.json  mh_002_scra_ambiguity.json  mh_003_disaster_mismatch.json  mh_004_fraud_exploitation.json  mh_005_open_complaint.json  mh_006_income_conflict.json  mh_007_non_english.json  sc_001_simple_approve.json  sc_002_physical_damage.json  sc_003_high_value_flagged.json  sc_004_both_delegations.json  sc_005_inactive_policy.json  sc_006_wrong_coverage.json  sc_007_multi_violation.json  sc_008_medium_risk.json  sc_009_other_type.json  sc_010_boundary_amount.json  sc_011_clean_physical.json
cognitive_core/: __init__.py
cognitive_core/analytics/: causal_dag.py  constraint_checker.py  (+4 more)
config/: SCALING.md  dev.yaml  prod.yaml  production_registry.json
configs/: coordinator.yaml
coordinator/: __init__.py  archetypes.py  cli.py  config.yaml  contracts.py  escalation.py  hardening.py  optimizer.py  physics.py  policy.py  runtime.py  store.py  tasks.py  types.py
docs/: AUTHORING_GUIDE.md  DEMO_TALKING_POINTS.md  api-reference.md  framework-state.md  institutional-intelligence.md  library-architecture.md  schema_glossary.yaml
domains/: ach_dispute.yaml  avm_regulation.yaml  avm_regulation_agentic.yaml  card_dispute.yaml  cardiac_triage.yaml  cardiac_triage_agentic.yaml  check_clearing_complaint.yaml  debit_spending.yaml  debit_spending_agentic.yaml  electronics_return.yaml  hardship_action.yaml  hardship_contact.yaml  hardship_eligibility.yaml  hardship_path.yaml  member_complaint.yaml  member_complaint_agentic.yaml  member_hardship.yaml  military_hardship.yaml  military_hardship_agentic.yaml  scaffold_domain.yaml  structuring_sar.yaml  structuring_sar_agentic.yaml  synthetic_damage.yaml
engine/: __init__.py  actions.py  agentic.py  audit.py  compensation.py  composer.py  config.py  config_loader.py  cost.py  db.py  domain_contract.py  eval_gate.py  governance.py  guardrails.py  health.py  hitl_routing.py  kill_switch.py  llm.py  logging.py  logic_breaker.py  manifest.py  nodes.py  pii.py  providers.py  replay.py  retry.py  runner.py  secrets.py  semantic_cache.py  settlement.py  shadow.py  state.py  stepper.py  tools.py  validate.py  webhooks.py
evals/: __main__.py  generate_card_dispute_cases.py  generate_product_return_cases.py  report.py  runner.py
examples/: agentic_test.db  card_dispute.py  coordinator_config_agentic.yaml  integration_example.py  loan-trace-example.html  mcp_template.py  run_ddd_test.py
fixtures/: api.py  cognitive_core.db  db.py
langgraph/: graph.py
mcp_servers/: actions_server.py  claims_services.py  compliance_server.py  data_services.py
output/: ARCHITECTURE.md  README.md  SYSTEM.md  sar_batch_results.json
registry/: README.md  __init__.py  primitives.py  schemas.py
scripts/: eval_live.py  eval_soundness.py  hardship_chain_demo.py  register_foundry_agents.py  validate_domain.py
tests/: demo_three_workflow.py  test_api.py  test_audit.py  test_batch_backpressure.py  test_batch_e2e.py  test_config.py  test_config_loader.py  test_contracts.py  test_coordinator.py  test_core.py  test_cost.py  test_db.py  test_ddd_state_machines.py  test_delegation_integration.py  test_demand_driven.py  test_devs_kernel.py  test_eval_gate.py  test_evals.py  test_foundry_adapter.py  test_guardrails.py  test_hardening.py  test_health.py  test_hitl_routing.py  test_integration.py  test_kill_switch.py  test_live_llm.py  test_logging.py  test_logic_breaker.py  test_manifest.py  test_multi_agent.py  test_optimizer.py  test_pii.py  test_rate_limit.py  test_replay.py  test_resilience.py  test_retry.py  test_secrets.py  test_semantic_cache.py  test_shadow.py  test_spec_lock.py  (+6 more)
workflows/: action_execution_orchestration.yaml  claim_adjudication.yaml  claim_intake.yaml  complaint_resolution.yaml  complaint_resolution_act.yaml  complaint_resolution_agentic.yaml  dispute_resolution.yaml  eligibility_constraints_assessment.yaml  field_scheduling_optimizer.yaml  fraud_review.yaml  fraud_screening.yaml  hardship_intake_packet.yaml  hardship_path_recommendation.yaml  loan_hardship.yaml  loan_hardship_agentic.yaml  member_contact_strategy.yaml  nurse_triage.yaml  nurse_triage_agentic.yaml  product_return.yaml  regulatory_impact.yaml  regulatory_impact_agentic.yaml  sar_investigation.yaml  sar_investigation_agentic.yaml  scaffold_workflow.yaml  spending_advisor.yaml  spending_advisor_agentic.yaml  vendor_coi_lookup.yaml  vendor_notification.yaml
(+424 files in other folders)
