[project]
name = "cognitive-core"
version = "0.1.0"
description = "AI Application Factory — composable cognitive workflows from YAML configuration"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary — Navy Federal Credit Union"}

dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
azure = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
]
azure-foundry = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-azure-ai>=0.1.0",
]
google = [
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
]
bedrock = [
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "coordinator*", "registry*", "mcp_servers*", "langgraph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py311"
